Fix unbalanced button spacing when icon is present

--- a/src/vs/base/browser/ui/button/button.css
+++ b/src/vs/base/browser/ui/button/button.css
@@ -44,6 +44,10 @@
 	color: inherit !important;
 }
 
+.monaco-text-button .codicon + span {
+	margin-right: 0.2em;
+}
+
 .monaco-text-button.monaco-text-button-with-short-label {
 	flex-direction: row;
 	flex-wrap: wrap;
